anywhere/k8s/vaultwarden/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vaultwarden
  namespace: vaultwarden
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`v1.beijns.eu.org`)
      kind: Rule
      middlewares:
        - name: security-headers
      services:
        - name: vaultwarden
          port: 80
  tls:
    certResolver: cloudflare
    domains:
      - main: v1.beijns.eu.org
